# csv-schema-evolution

./: .coveragerc  .dockerignore  .env  AGENTS.md  CHANGELOG.md  README.md  README_v2.md  command.txt  docker-compose.yml  pylintrc  pytest.ini  readme.md  test.txt
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md  dependabot.yml
backend/: .coveragerc  .dockerignore  .env  .pylintrc  Dockerfile  csv_schema_evolution.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
backend/app/: main.py
backend/app/api/v1/: files.py
backend/app/api/v1/endpoints/: files.py  health.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: mongo.py
backend/app/models/: file_models.py
backend/app/repositories/: __init__.py  file_repository.py
backend/app/services/: cleanup.py  csv_handler.py  csv_processor.py  dialect_detector.py  file_service.py  sanitize.py  storage.py  transposer.py
backend/app/utils/: sanitize.py  storage.py  validators.py
backend/scripts/: generate_key.py
backend/tests/: conftest.py  run_tests.py
backend/tests/integration/: test_api_errors.py  test_api_files.py  test_messy_upload.py
backend/tests/unit/: test_cleanup.py  test_csv_handler_grouping.py  test_csv_processor.py  test_csv_vertical.py  test_dialect_detector.py  test_edge_cases.py  test_file_service.py  test_health_endpoints.py  test_middleware.py  test_models.py  test_sanitize.py  test_storage.py  test_transposer.py  test_validators.py
docs/: REF.md  api-reference.md  architecture.md  ci-cd  ci-cd.md  engine-review.md  (+7 more)
(+15 files in other folders)
